# jetson-orin-matmul-analysis

./: .clang-format  .cpplint  .editorconfig  .gitignore  .shellcheckrc  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SUDO_SETUP_GUIDE.md  pyproject.toml
.github/: FUNDING.yml  LINTING_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.md  community_benchmark.md  feature_request.md
.github/workflows/: ci.yml  validate.yml
benchmarks/: multi_power_mode_benchmark.py
cuda/kernels/: blocked_multiplication.cu  cublas_multiplication.cu  naive_multiplication.cu  tensor_core_multiplication.cu
cuda/utils/: common.cu  common.h  logger.h
data/: visualize_power_modes.py
data/raw/power_modes/: blocked_3mode_analysis_20251009_202636.csv  blocked_3mode_analysis_20251009_202636.json  blocked_mode_0_15W_20251009_202347.csv  blocked_mode_0_15W_20251009_202347.json  blocked_mode_1_25W_20251009_202510.csv  blocked_mode_1_25W_20251009_202510.json  blocked_mode_2_MAXN_SUPER_20251009_202628.csv  blocked_mode_2_MAXN_SUPER_20251009_202628.json  cublas_3mode_analysis_20251009_202636.csv  cublas_3mode_analysis_20251009_202636.json  cublas_mode_0_15W_20251009_202347.csv  cublas_mode_0_15W_20251009_202347.json  cublas_mode_1_25W_20251009_202510.csv  cublas_mode_1_25W_20251009_202510.json  cublas_mode_2_MAXN_SUPER_20251009_202628.csv  cublas_mode_2_MAXN_SUPER_20251009_202628.json  naive_3mode_analysis_20251009_202636.csv  naive_3mode_analysis_20251009_202636.json  naive_mode_0_15W_20251009_202347.csv  naive_mode_0_15W_20251009_202347.json  naive_mode_1_25W_20251009_202510.csv  naive_mode_1_25W_20251009_202510.json  naive_mode_2_MAXN_SUPER_20251009_202628.csv  naive_mode_2_MAXN_SUPER_20251009_202628.json  tensor_core_3mode_analysis_20251009_202636.csv  tensor_core_3mode_analysis_20251009_202636.json  tensor_core_mode_0_15W_20251009_202347.csv  tensor_core_mode_0_15W_20251009_202347.json  tensor_core_mode_1_25W_20251009_202510.csv  tensor_core_mode_1_25W_20251009_202510.json  tensor_core_mode_2_MAXN_SUPER_20251009_202628.csv  tensor_core_mode_2_MAXN_SUPER_20251009_202628.json
data/reports/: analysis_naive_blocked_cublas_tensor_core_20251009_202636.md  implementation_comparison_report_20251009_203418.md
scripts/: archive_and_rerun.sh  collect_system_specs.sh  compare_benchmark_runs.py  install_git_hooks.sh  remove_passwordless_sudo.sh  setup_passwordless_sudo.sh
tests/: conftest.py  test_integration.py  test_performance.py  test_utils.py
